--- a/docs/notebooks/programmation.ipynb
+++ b/docs/notebooks/programmation.ipynb
@@ -399,6 +399,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Il existe également un autre type de boucle que for, la boucle while qui correspond à tant que :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7629\n"
+     ]
+    }
+   ],
+   "source": [
+    "mot_de_passe = 7629\n",
+    "trouver_mdp = 0\n",
+    "\n",
+    "while trouver_mdp != mot_de_passe:\n",
+    "    trouver_mdp += 1\n",
+    "    \n",
+    "print(trouver_mdp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 5- Les conditions **if**, **elif** et **else**"
    ]
   },
@@ -410,7 +440,8 @@
     "##### Il existe alors différentes conditions :\n",
     " - Comme plus/moins grand que : \"<, >\"\n",
     " - Supérieur/inférieur à : \"<=, >=\"\n",
-    " - Egale : \"=\""
+    " - Egale : \"==\"\n",
+    " - Différent : \"!=\""
    ]
   },
   {
@@ -439,6 +470,60 @@
    "metadata": {},
    "source": [
     "##### La variable mon_age étant inférieur à 18, la première cellule ne s'exécute pas !"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6- Les booléens :"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Les **booléens** sont des structures conditionnelles, elles agissent de la m^me manière que <, ou ==\n",
+    "##### Il n'en existe que deux : True et False pour Vrai et Faux :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tant mieux\n"
+     ]
+    }
+   ],
+   "source": [
+    " content = True\n",
+    " # Attention, il est important d'utiliser des majuscules pour que Python puisse les reconaître\n",
+    " if content == True:\n",
+    "    print(\"Tant mieux\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# On peut également demander si quelque chose est vrai ou faux :\n",
+    "mon_age = 15\n",
+    "print(mon_age == 17)"
    ]
   }
  ],
