--- a/docs/notebooks/programmation.ipynb
+++ b/docs/notebooks/programmation.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -25,18 +25,18 @@
        "5"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "3 + 3"
+    "3 + 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "5"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,22 +63,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "30"
+       "25"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(3 + 3) * (7 - 2)"
+    "(3 + 2) * (7 - 2)"
    ]
   },
   {
@@ -86,8 +86,8 @@
    "metadata": {},
    "source": [
     "##### Pour ce faire, Python utilise des signes correspondant à chaque action :\n",
-    " - \"+\" et \"-\" pour l'addition\n",
-    " - \"*\" et \"/\" pour la division"
+    " - \"+\" et \"-\" pour l'addition et la soustraction\n",
+    " - \"*\" et \"/\" pour la multiplication et la division"
    ]
   },
   {
@@ -128,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Pour faire la différence entre les nombres **int** et les chaines de caractères **str**, on utilise des \"guillemets\".\n",
+    "##### Pour faire la différence entre les nombres **int**, et les chaines de caractères **str**, on utilise des \"guillemets\".\n",
     "##### Il est aussi possible d'ajouter des chaînes de caractères en utilisant \"+\" mais cela ne fonctionne pas du tout comme l'addition de nombres :"
    ]
   },
@@ -246,14 +246,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n"
+      "15\n"
      ]
     }
    ],
@@ -267,20 +267,44 @@
    "metadata": {},
    "source": [
     "##### La variable **mon_age** retient l'information **15** qu'il renvoit avec la commande print(mon_age)\n",
-    "##### Attention, print(\"mon_age\") ne fera que renvoyer une chaine de caractère !\n",
-    "##### Il est alors possible de combiner les nombres et les chaines de caractères dans la commande print en utilisant une virgule :"
+    "##### Attention, print(\"mon_age\") ne fera que renvoyer une chaine de caractère !"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "J'ai 10 ans !\n"
+      "mon_age\n"
+     ]
+    }
+   ],
+   "source": [
+    "mon_age = 15\n",
+    "print(\"mon_age\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Il est alors possible de combiner les nombres et les chaines de caractères dans la commande print en utilisant une virgule :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "J'ai 15 ans !\n"
      ]
     }
    ],
@@ -440,36 +464,38 @@
     "##### Il existe alors différentes conditions :\n",
     " - Comme plus/moins grand que : \"<, >\"\n",
     " - Supérieur/inférieur à : \"<=, >=\"\n",
-    " - Egale : \"==\"\n",
-    " - Différent : \"!=\""
+    " - Égale à : \"==\"\n",
+    " - Différent de : \"!=\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "je ne suis pas encore majeur\n"
+      "-4 est un nombre négatif\n"
      ]
     }
    ],
    "source": [
-    "mon_age = 15\n",
-    "if mon_age >= 18:\n",
-    "    print(\"je suis majeur\")\n",
-    "elif mon_age < 18:\n",
-    "    print(\"je ne suis pas encore majeur\")"
+    "nombre = -4\n",
+    "if nombre > 0:\n",
+    "    print(nombre, \"est un nombre positif\")\n",
+    "elif nombre < 0:\n",
+    "    print(nombre, \"est un nombre négatif\")\n",
+    "else:\n",
+    "    print(\"nombre est égal à 0\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### La variable mon_age étant inférieur à 18, la première cellule ne s'exécute pas !"
+    "##### La variable **nombre** étant inférieur à 0, la première et la dernière cellule ne s'exécutent pas !"
    ]
   },
   {
@@ -483,7 +509,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Les **booléens** sont des structures conditionnelles, elles agissent de la m^me manière que <, ou ==\n",
+    "##### Les **booléens** sont des structures conditionnelles, elles agissent de la même manière que <, ou ==\n",
     "##### Il n'en existe que deux : True et False pour Vrai et Faux :"
    ]
   },
