--- a/docs/notebooks/bases_python.ipynb
+++ b/docs/notebooks/bases_python.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Les bases de Python :"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 1- Calculs simples :"
    ]
   },
@@ -453,6 +460,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### La boucle while s'execute donc jusqu'à ce que sa condition soit remplie contrairement à la boucle for qui s'execute un nombre défini de fois"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 5- Les conditions **if**, **elif** et **else**"
    ]
   },
@@ -550,6 +564,199 @@
     "# On peut également demander si quelque chose est vrai ou faux :\n",
     "mon_age = 15\n",
     "print(mon_age == 17)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7 - Les listes :"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Les \"\"listes\"\" permettent de stocker plusieurs nombres, chaines de caractères ou variable à l'intérieur d'une seul et même liste.\n",
+    "##### Pour définir une liste on utilise \"[]\" espacé de virugles :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 7, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "liste = [1, 3, 5, 7, 9]\n",
+    "print(liste)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hello', 'world', 'test']\n"
+     ]
+    }
+   ],
+   "source": [
+    "liste = [\"hello\", \"world\", \"test\"]\n",
+    "print(liste)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Pour accéder à un élément dans une liste on utilise le nom de la liste suivie de l'indice de l'élément entre crochet que l'on veut.\n",
+    "##### Attention, dans python une liste commence par l'élément 0 :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "liste = [1, 3, 5, 7, 9]\n",
+    "print(liste[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Il est également possible de créer une liste de liste.\n",
+    "##### On utilisera donc deux indices pour accéder aux élements :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "liste = [[1, 3, 5], [2, 4, 6], [7, 8, 9]]\n",
+    "print(liste[0][1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### On peut aussi coupler les listes aux boucles pour les parcourir.\n",
+    "##### Ici nous parcourons la liste en utilisant les **valeurs** (retenues dans \"i\") :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Les chiffre pairs : [2, 4, 6, 8]\n",
+      "Les chiffre impairs : [1, 3, 5, 7, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "liste = [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "liste_pair = []\n",
+    "liste_impair = []\n",
+    "#création de deux listes vides\n",
+    "for valeur in liste:\n",
+    "    if valeur%2 == 0:\n",
+    "        liste_pair.append(valeur)\n",
+    "        #append permet d'ajouter une valeur à une liste\n",
+    "    else:\n",
+    "        liste_impair.append(valeur)\n",
+    "print(\"Les chiffre pairs :\", liste_pair)\n",
+    "print(\"Les chiffre impairs :\", liste_impair)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Mais nous pouvons également parcourir une liste avec les indices :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Les chiffre pairs : []\n",
+      "Les chiffre impairs : [1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "liste = [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "liste_pair = []\n",
+    "liste_impair = []\n",
+    "#création de deux listes vides\n",
+    "for indice in range(len(liste)):\n",
+    "    if liste[i]%2 == 0:\n",
+    "        liste_pair.append(liste[indice])\n",
+    "        #append permet d'ajouter une valeur à une liste\n",
+    "    else:\n",
+    "        liste_impair.append(liste[indice])\n",
+    "print(\"Les chiffre pairs :\", liste_pair)\n",
+    "print(\"Les chiffre impairs :\", liste_impair)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Il est donc important de savoir la façon la plus adaptée de parcourir une liste en les valeurs et les indices !\n",
+    "##### Les commandes utilisées :\n",
+    "- A"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### 8 - Les fonctions :"
    ]
   }
  ],
