--- a/docs/notebooks/T1/Notion_de_Paradigmes-Introduction.ipynb
+++ b/docs/notebooks/T1/Notion_de_Paradigmes-Introduction.ipynb
@@ -141,10 +141,11 @@
     "# demande une note pouvant être de type float comrpise entre 0 et 20\n",
     "def demander_note():\n",
     "    note = float(input(\"Votre note :\"))\n",
-    "    if note >= 0 and note <= 20:\n",
-    "        return note\n",
-    "    else:\n",
-    "        print(\"Votre note n'est pas comprise entre 0 et 20 !\")"
+    "    try:\n",
+    "        assert 0 <= note <= 20, \"Votre note n'es pas comprise entre 0 et 20 !\"\n",
+    "    except:\n",
+    "        note = float(input(\"Votre note :\"))\n",
+    "    return note"
    ]
   },
   {
