--- a/docs/notebooks/T1/1Notion_de_Paradigmes-Introduction-Nathanael.ipynb
+++ b/docs/notebooks/T1/1Notion_de_Paradigmes-Introduction-Nathanael.ipynb
@@ -143,7 +143,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.1 64-bit",
+   "display_name": "Python 3.8.13 64-bit ('3.8.13')",
    "language": "python",
    "name": "python3"
   },
@@ -157,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.8.13"
   },
   "toc": {
    "base_numbering": 1,
@@ -203,7 +203,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "c813da0d88532624e95401f841607d640ef6d724b81c00ab0d0885f617a921c3"
+    "hash": "110cc1dee26208153f2972f08a2ad52b6a56238dc66d48e87fb757ef2996db56"
    }
   }
  },
