--- a/docs/notebooks/T1/4Structure_Lineaire-Liste-Nathanael.ipynb
+++ b/docs/notebooks/T1/4Structure_Lineaire-Liste-Nathanael.ipynb
@@ -20,9 +20,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Hello World!', str)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "maPremiereVariable = 'Hello World!'\n",
     "maPremiereVariable, type(maPremiereVariable)"
@@ -30,9 +41,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-5, int)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "maSecondeVariable = -5\n",
     "maSecondeVariable, type(maSecondeVariable)"
@@ -40,9 +62,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5.0, float)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "maTroisiemeVariable = 5.0\n",
     "maTroisiemeVariable, type(maTroisiemeVariable)"
@@ -50,9 +83,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(False, bool)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "maQuatriemeVariable = ( 0 == 1 )\n",
     "maQuatriemeVariable, type(maQuatriemeVariable)"
@@ -69,9 +113,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((3.14, 'cours NSI', True, 5), 'cours NSI', tuple)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "monTuple=(3.14, \"cours NSI\", True, 5)\n",
     "monTuple, monTuple[1], type(monTuple)"
@@ -79,9 +134,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([3.14, 'cours NSI', True, 5], 'cours NSI', list)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "maListe=[3.14, \"cours NSI\", True, 5]\n",
     "maListe, maListe[1], type(maListe)"
@@ -89,9 +155,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({'zero': 0, 'un': 1, 'deux': 2, 'trois': 3}, 0, dict)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "monDictionnaire = {'zero':0, 'un':1, 'deux':2,'trois':3}\n",
     "monDictionnaire, monDictionnaire['zero'], type(monDictionnaire)"
@@ -99,9 +176,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([[1, 2, 3, 4], ['toto', 'titi', 'tata'], [-3.14, 0.5, 1, 2.35, 6.48]],\n",
+       " 'toto',\n",
+       " list)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "monTableau = [[1,2,3,4],[\"toto\",\"titi\",\"tata\"], [-3.14, 0.5, 1, 2.35, 6.48]]\n",
     "monTableau, monTableau[1][0], type(monTableau)"
@@ -205,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,6 +313,38 @@
     "    if estVide(L):\n",
     "        return 0\n",
     "    return 1 + compte(L[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nil = vide()\n",
+    "estVide(nil)\n",
+    "L = cons(5, cons(4, cons(3, cons(2, cons(1, cons(0,nil))))))\n",
+    "estVide(L)\n",
+    "compte(L)\n",
+    "L = ajouteEnTete(L,6)\n",
+    "compte(L)\n",
+    "x,L=supprEnTete(L)\n",
+    "x\n",
+    "compte(L)\n",
+    "x, L=supprEnTete(L)\n",
+    "x\n",
+    "compte(L) "
    ]
   },
   {
@@ -261,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,15 +467,31 @@
     "print(L.cdr().car())\n",
     "print(L.cdr().cdr().car())\n",
     "```\n",
-    "et écrire l’instruction qui permet d’afficher le dernier élément de la liste."
+    "et écrire l’instruction qui permet d’afficher le dernier élément de la liste : \"print(L.car())\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "5\n",
+      "4\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(L.estVide())\n",
+    "print(L.car())\n",
+    "print(L.cdr().car())\n",
+    "print(L.cdr().cdr().car())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -384,10 +522,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def longueurListe(L):\n",
+    "    n = 0\n",
+    "    while not(L.estVide()):\n",
+    "        n += 1\n",
+    "        L = L.cdr()\n",
+    "    return n\n",
+    "    \n",
+    "def listeElements(L):\n",
+    "    t = []\n",
+    "    while not(L.estVide()):\n",
+    "        t.append(L.car())\n",
+    "        L = L.cdr()\n",
+    "    return t"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -395,7 +547,7 @@
    "source": [
     "Que font-elles ?\n",
     "\n",
-    "..."
+    "La première renvoie la longueur de la liste en la parcourant tant qu'elle n'est pas vie et la seconde permet de transformer une liste en une liste python et de la renvoyer"
    ]
   },
   {
@@ -413,16 +565,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6, 5, 4, 3, 2, 1, 0]"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "L = cons(6,L)\n",
+    "listeElements(L)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "? ..."
+    "Cette instruction permet d'ajouter 6 à la liste."
    ]
   },
   {
@@ -436,10 +602,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def ajouteEnTete(tete, queue):\n",
+    "    return "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6, 5, 4, 3, 2, 1, 0]"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ajouteEnTete(6, L)\n",
+    "listeElements(L)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -536,7 +726,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.13 64-bit ('shims')",
    "language": "python",
    "name": "python3"
   },
@@ -550,7 +740,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.13"
   },
   "toc": {
    "base_numbering": 1,
@@ -593,6 +783,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "9ac03a0a6051494cc606d484d27d20fce22fb7b4d169f583271e11d5ba46a56e"
+   }
   }
  },
  "nbformat": 4,
