--- a/docs/notebooks/T1/4Structure_Lineaire-Liste-Nathanael.ipynb
+++ b/docs/notebooks/T1/4Structure_Lineaire-Liste-Nathanael.ipynb
@@ -602,17 +602,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ajouteEnTete(tete, queue):\n",
+    "def ajouteEnTete(L, x):\n",
     "    return "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
        "[6, 5, 4, 3, 2, 1, 0]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
