--- a/docs/notebooks/T1/4Structure_Lineaire-Liste-Nathanael.ipynb
+++ b/docs/notebooks/T1/4Structure_Lineaire-Liste-Nathanael.ipynb
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
        "5"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,12 +445,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "nil=Liste(None)\n",
     "L = cons(5, cons(4, cons(3, cons(2, cons(1, cons(0,nil))))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "L.car()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Q=L.cdr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Q.car()"
    ]
   },
   {
@@ -472,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,12 +591,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "longueurListe(L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 4, 3, 2, 1, 0]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "listeElements(L)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Que font-elles ?\n",
     "\n",
-    "La première renvoie la longueur de la liste en la parcourant tant qu'elle n'est pas vie et la seconde permet de transformer une liste en une liste python et de la renvoyer"
+    "La première renvoie la longueur de la liste en la parcourant et la deuxième permet d'afficher les élements d'une liste."
    ]
   },
   {
@@ -565,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +663,7 @@
        "[6, 5, 4, 3, 2, 1, 0]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +677,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cette instruction permet d'ajouter 6 à la liste."
+    "Cette instruction permet d'ajouter 6 à l'entête de la liste."
    ]
   },
   {
@@ -602,33 +691,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def ajouteEnTete(L, x):\n",
-    "    return "
+    "    return listeElements(cons(x,L))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[6, 5, 4, 3, 2, 1, 0]"
+       "<__main__.Liste at 0x7f15255f8610>"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ajouteEnTete(6, L)\n",
-    "listeElements(L)"
+    "test = cons(5, cons(4, cons(3, cons(2, cons(1, cons(0,nil))))))\n",
+    "ajouteEnTete(test, 6)"
    ]
   },
   {
@@ -647,10 +736,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "L = cons(5, cons(4, cons(3, cons(2, cons(1, cons(0,nil))))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = L.car()\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 3, 2, 1, 0]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "L = cons(L.cdr().car(), L.cdr().cdr())\n",
+    "listeElements(L)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -663,17 +796,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3 class='fa fa-cog' style=\"color: MediumSeaGreen\"> A faire vous même n°5 :</h3>\n",
+    "<h3 class='fa fa-cog' style=\"color: MediumSeaGreen\"> A faire vous même n°7 :</h3>\n",
     "\n",
     "Écrire une fonction `supprEnTete` qui prend en paramètre une liste et qui retourne son entête et la liste amputée de l’entête."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def supprEnTete(L):\n",
+    "    return L.car(), cons(L.cdr().car(), L.cdr().cdr())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, <__main__.Liste at 0x7f152555d0a0>)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "supprEnTete(L)"
+   ]
   },
   {
    "cell_type": "markdown",
