--- a/docs/notebooks/T1/5Structure_Lineaire-Pile-Nathanael.ipynb
+++ b/docs/notebooks/T1/5Structure_Lineaire-Pile-Nathanael.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,10 +104,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = pile()\n",
+    "for i in range(5):\n",
+    "    empiler(p,2*i)\n",
+    "a = depiler(p)\n",
+    "print(a)\n",
+    "print(vide(p))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,20 +136,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def taille(p) :"
+    "def taille(p):\n",
+    "    return len(p)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sommet(p) :"
+    "def sommet(p) :\n",
+    "    assert not vide(p), \"Pile vide\"\n",
+    "    return p[-1]"
    ]
   },
   {
@@ -152,30 +171,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Pile :\n",
     "    \n",
-    "'''classe Pile création d’une instance Pile avec une liste'''\n",
+    "    '''classe Pile création d’une instance Pile avec une liste'''\n",
     "\n",
-    "def __init__(self):\n",
-    "    '''Initialisation d’une pile vide'''\n",
-    "    self.L=[]\n",
+    "    def __init__(self):\n",
+    "        '''Initialisation d’une pile vide'''\n",
+    "        self.L=[]\n",
     "    \n",
-    "def vide(self):\n",
-    "    '''teste si la pile est vide'''\n",
-    "    return self.L==[]\n",
+    "    def vide(self):\n",
+    "        '''teste si la pile est vide'''\n",
+    "        return self.L==[]\n",
     "\n",
-    "def depiler(self):\n",
-    "    '''dépile'''\n",
-    "    assert not self.vide(),\"Pile vide\"\n",
-    "    return self.L.pop()\n",
+    "    def depiler(self):\n",
+    "        '''dépile'''\n",
+    "        assert not self.vide(),\"Pile vide\"\n",
+    "        return self.L.pop()\n",
     "\n",
-    "def empiler(self,x):\n",
-    "    '''empile'''\n",
-    "    self.L.append(x)"
+    "    def empiler(self,x):\n",
+    "        '''empile'''\n",
+    "        self.L.append(x)"
    ]
   },
   {
@@ -200,10 +219,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8]\n",
+      "8\n",
+      "[0, 2, 4, 6]\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = Pile()\n",
+    "for i in range(5) :\n",
+    "    p.empiler(2*i)\n",
+    "print(p.L)\n",
+    "a = p.depiler()\n",
+    "print(a)\n",
+    "print(p.L)\n",
+    "print(p.vide())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -216,17 +255,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def taille(self):\n",
+    "    return len(self.L)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def sommet(self):\n",
+    "    assert not self.vide(),\"Pile vide\"\n",
+    "    return self.L[-1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -256,10 +302,21 @@
     "\n",
     "Écrire en pseudo code l’algorithme\n",
     "\n",
-    "...\n",
+    "a = Pile()\n",
     "\n",
-    "...\n",
+    "pour i dans a:\n",
     "\n",
+    "    si i == \")\":\n",
+    "\n",
+    "        empiler(i)\n",
+    "\n",
+    "    si i == \"(\":\n",
+    "\n",
+    "        assert not vide(a.L), \"Faux\"\n",
+    "\n",
+    "        depiler(a.L)\n",
+    "        \n",
+    "vide(a.L)\n",
     "\n",
     "<h3 class='fa fa-cog' style=\"color: MediumSeaGreen\"> A faire vous même n°6 :</h3>\n",
     "\n",
@@ -268,10 +325,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def verification(expr):\n",
+    "    a = Pile()\n",
+    "    for i in expr:\n",
+    "        if i == \"(\":\n",
+    "            a.empiler(i)\n",
+    "        if i == \")\":\n",
+    "            assert not a.vide(), \"Faux\"\n",
+    "            a.depiler()\n",
+    "    return a.vide()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "verification(\"(7*4)+(6*5(\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -381,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13 (default, Oct  4 2022, 14:00:32) \n[GCC 9.4.0]"
+   "version": "3.8.13"
   },
   "toc": {
    "base_numbering": 1,
