--- a/docs/notebooks/T1/5Structure_Lineaire-Pile-Nathanael.ipynb
+++ b/docs/notebooks/T1/5Structure_Lineaire-Pile-Nathanael.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = pile()\n",
+    "for i in range(5):\n",
+    "    empiler(p,2*i)\n",
+    "\n",
+    "print(p)\n",
+    "taille(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,9 +188,36 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = pile()\n",
+    "for i in range(5):\n",
+    "    empiler(p,2*i)\n",
+    "\n",
+    "print(p)\n",
+    "sommet(p)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -171,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,28 +278,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = Pile()\n",
+    "for i in range(5) :\n",
+    "    p.empiler(2*i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 2, 4, 6, 8]\n",
-      "8\n",
-      "[0, 2, 4, 6]\n",
+      "[0, 2, 4, 6, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(p.L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = p.depiler()\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(p.L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "False\n"
      ]
     }
    ],
    "source": [
-    "p = Pile()\n",
-    "for i in range(5) :\n",
-    "    p.empiler(2*i)\n",
-    "print(p.L)\n",
-    "a = p.depiler()\n",
-    "print(a)\n",
-    "print(p.L)\n",
     "print(p.vide())"
    ]
   },
@@ -255,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,13 +377,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = Pile()\n",
+    "for i in range(5) :\n",
+    "    p.empiler(2*i)\n",
+    "\n",
+    "taille(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sommet(self):\n",
     "    assert not self.vide(),\"Pile vide\"\n",
     "    return self.L[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = Pile()\n",
+    "for i in range(5) :\n",
+    "    p.empiler(2*i)\n",
+    "\n",
+    "sommet(p)"
    ]
   },
   {
@@ -325,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,10 +531,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def verification(expr):\n",
+    "    a = Pile()\n",
+    "    b = Pile()\n",
+    "    for i in expr:\n",
+    "        if i == \"(\":\n",
+    "            a.empiler(i)\n",
+    "        if i == \")\":\n",
+    "            assert not a.vide(), \"Faux\"\n",
+    "            a.depiler()\n",
+    "        if i == \"[\":\n",
+    "            b.empiler(i)\n",
+    "        if i == \"]\":\n",
+    "            assert not b.vide(), \"Faux\"\n",
+    "            b.depiler()\n",
+    "    return a.vide() and b.vide()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "verification(\"(7*4)+[6*5]\")"
+   ]
   },
   {
    "cell_type": "markdown",
