--- a/docs/notebooks/T1/4Structure_Lineaire-Liste-Nathanael.ipynb
+++ b/docs/notebooks/T1/4Structure_Lineaire-Liste-Nathanael.ipynb
@@ -371,6 +371,171 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nil = vide()\n",
+    "estVide(nil)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "L = cons(5, cons(4, cons(3, cons(2, cons(1, cons(0,nil))))))\n",
+    "estVide(L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compte(L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "L = ajouteEnTete(L,6)\n",
+    "compte(L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x, L=supprEnTete(L)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compte(L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x, L=supprEnTete(L)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compte(L)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -383,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,61 +610,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "nil=Liste(None)\n",
     "L = cons(5, cons(4, cons(3, cons(2, cons(1, cons(0,nil))))))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "L.car()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Q=L.cdr()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Q.car()"
    ]
   },
   {
@@ -521,24 +637,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n",
-      "5\n",
-      "4\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(L.estVide())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(L.car())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(L.cdr().car())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "3\n"
      ]
     }
    ],
    "source": [
-    "print(L.estVide())\n",
-    "print(L.car())\n",
-    "print(L.cdr().car())\n",
     "print(L.cdr().cdr().car())"
    ]
   },
@@ -571,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -601,18 +762,19 @@
        "6"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "L = cons(5, cons(4, cons(3, cons(2, cons(1, cons(0,nil))))))\n",
     "longueurListe(L)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -621,12 +783,13 @@
        "[5, 4, 3, 2, 1, 0]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "L = cons(5, cons(4, cons(3, cons(2, cons(1, cons(0,nil))))))\n",
     "listeElements(L)"
    ]
   },
@@ -636,7 +799,9 @@
    "source": [
     "Que font-elles ?\n",
     "\n",
-    "La première renvoie la longueur de la liste en la parcourant et la deuxième permet d'afficher les élements d'une liste."
+    "• La première permet de renvoyer la longueur d'une liste en la parcourant \n",
+    "\n",
+    "• La deuxième permet d'afficher les élements d'une liste."
    ]
   },
   {
@@ -654,7 +819,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 4, 3, 2, 1, 0]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "L = cons(5, cons(4, cons(3, cons(2, cons(1, cons(0,nil))))))\n",
+    "listeElements(L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +849,7 @@
        "[6, 5, 4, 3, 2, 1, 0]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,7 +863,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cette instruction permet d'ajouter 6 à l'entête de la liste."
+    "Cette instruction permet d'ajouter un élément à l'entête d'une liste."
    ]
   },
   {
@@ -691,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -710,13 +896,13 @@
        "[6, 5, 4, 3, 2, 1, 0]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#test = cons(5, cons(4, cons(3, cons(2, cons(1, cons(0,nil))))))\n",
+    "test = cons(5, cons(4, cons(3, cons(2, cons(1, cons(0,nil))))))\n",
     "ajouteEnTete(test, 6)"
    ]
   },
@@ -745,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -754,19 +940,20 @@
        "5"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "L = cons(5, cons(4, cons(3, cons(2, cons(1, cons(0,nil))))))\n",
     "x = L.car()\n",
     "x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -775,12 +962,13 @@
        "[4, 3, 2, 1, 0]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "L = cons(5, cons(4, cons(3, cons(2, cons(1, cons(0,nil))))))\n",
     "L = cons(L.cdr().car(), L.cdr().cdr())\n",
     "listeElements(L)"
    ]
@@ -789,7 +977,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "? ..."
+    "• x = L.car() **:** définis x comme l'entête d'une liste\n",
+    "\n",
+    "• L = cons(L.cdr().car(), L.cdr().cdr()) **:** retire l'entête d'une liste"
    ]
   },
   {
@@ -803,31 +993,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "def supprEnTete(L):\n",
-    "    return L.car(), cons(L.cdr().car(), L.cdr().cdr())"
+    "    return (L.car(), listeElements(L.cdr()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(4, <__main__.Liste at 0x7f95bdad03a0>)"
+       "(5, [4, 3, 2, 1, 0])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "L = cons(5, cons(4, cons(3, cons(2, cons(1, cons(0,nil))))))\n",
     "supprEnTete(L)"
    ]
   },
